reverting event API changes
